tests/regression/success/forward_refs.lus
node one (i: two) returns (out: two) ;
(*@contract
  import two (i) returns (out) ;
*)
let
  out = two(two_const -> pre i) ;
tel

node two (i: two) returns (out: two) ;
let
  out = 0.0 -> pre i ;
tel

contract two (i: two) returns (out: real) ;
let
  import one (i) returns (out) ;
  assume i >= 0.0 ;
  guarantee out >= 0.0 ;
tel

contract one (i: two) returns (out: real) ;
let
  assume i >= 0.0 ;
  guarantee out >= 0.0 ;
tel

type one = { blah: two } ;

type two = real ;

const two_const: real = 0.0 ;