tests/regression/error/circular_contracts.lus
node one (in: two) returns (out: two) ;
(*@contract
  import blah (in) returns (out) ;
*)
let
  out = two(0.0 -> pre in) ;
tel

node two (in: two) returns (out: two) ;
let
  out = one(0.0 -> pre in) ;
tel

contract blah (in: two) returns (out: real) ;
let
  import blih (in) returns (out) ;
  assume in >= 0.0 ;
  guarantee out >= 0.0 ;
tel

contract blih (in: two) returns (out: real) ;
let
  import blah (in) returns (out) ;
  assume in >= 0.0 ;
  guarantee out >= 0.0 ;
tel

type one = { blah: two } ;

type two = real ;

